--- a/app/_scss/dependencies/variables/_sizes.scss
+++ b/app/_scss/dependencies/variables/_sizes.scss
@@ -3,3 +3,6 @@
 // ------------------------------------------------------------------
 
 $nest-width: 640px;
+
+$sidebar-width: 440px;
+  $sidebar-width-tablet: 400px;
