--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -11,6 +11,9 @@
 // ------------------------------------------------------------------
 @import "dependencies/extends/_non-semantic-helpers";
 @import "dependencies/extends/_shortcuts";
+
+@import "dependencies/mixins/_bodhi";
+
 @import "dependencies/variables/_colors";
 @import "dependencies/variables/_paths";
 @import "dependencies/variables/_sizes";
