--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 </head>
-<body class="preload">
+<body class="preload halloween">
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
@@ -63,6 +63,7 @@
     </section><!-- /div#main -->
 
     <footer id="page-footer">
+
     </footer><!-- /footer#page-footer -->
 
   </div>
