--- a/app/_scss/areas/_page-sidebar.scss
+++ b/app/_scss/areas/_page-sidebar.scss
@@ -3,7 +3,7 @@
 // ------------------------------------------------------------------
 
 #page-sidebar {
-  background-image: url("#{$image-path}/color-blocks-halloween.jpg");
+  background-image: url("#{$image-path}/color-blocks.jpg");
   background-position: left top;
   background-size: auto 100%;
   background-repeat: repeat;
@@ -12,13 +12,15 @@
   height: 100%;
   min-height: 100%;
   position: relative;
-  min-width: 400px;
-  max-width: 600px;
-  width: 33%;
+  width: $sidebar-width;
+
+  @include bodhi(tablet) {
+    width: $sidebar-width-tablet;
+  }
 
   h1 {
     $size: 200px;
-    background-image: url("#{$image-path}/fuck-halloween.svg");
+    background-image: url("#{$image-path}/fuck.svg");
     background-position: top left;
     background-size: auto $size;
     color: $white;
@@ -30,6 +32,30 @@
       bottom: 200px;
       left: 20px;
   } // h1
+
+  $holiday-list:
+    new-years,
+    valentines-day,
+    st-patricks-day,
+    easter,
+    fourth-of-july,
+    halloween,
+    thanksgiving,
+    christmas;
+
+  @each $holiday in $holiday-list {
+
+    body.#{nth($holiday, 1)} & {
+      background-image: url("#{$image-path}/color-blocks-#{nth($holiday, 1)}.jpg");
+
+      h1 {
+        background-image: url("#{$image-path}/fuck-#{nth($holiday, 1)}.svg");
+      }
+
+    } // body.#{nth($holiday, 1)}  {
+
+  } // @each
+
 
   .social-links {
     @extend %list-in-disguise;
