Responsive … fer realz yall

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -33,7 +33,7 @@
   <![endif]-->
 
 
-  <aside id="page-sidebar">
+   <header id="page-header" role="banner">
     <h1>Lynn.io</h1>
 
     <ul class="social-links">
@@ -42,19 +42,16 @@
       <li><a class="ss-icon" href="http://www.dribbble.com/lynnwallenstein" target="dribbble">Dribbble</a></li>
     </ul>
 
-  </aside>
+  </header>
 
   <div id="content-wrapper">
-    <header id="page-header" role="banner">
 
-      <nav id="page-navigation">
-        <ol>
-          <li><a href="/about/index.html">About</a></li>
-          <li><a href="/">Posts</a></li>
-        </ol>
-      </nav>
-
-    </header><!-- /header#page-header -->
+    <nav id="page-navigation">
+      <ol>
+        <li><a href="/about/index.html">About</a></li>
+        <li><a href="/">Posts</a></li>
+      </ol>
+    </nav>
 
     <section id="main" role="main">
 
