--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -31,7 +31,8 @@
 @import "areas/_page";
 @import "areas/_page-footer";
 @import "areas/_page-header";
-@import "areas/_page-sidebar";
+@import "areas/_page-template";
+@import "areas/_post-template";
 
 
 // Print CSS
