--- a/app/_scss/areas/_page.scss
+++ b/app/_scss/areas/_page.scss
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  border-top: 10px solid $wet-asphalt;
+  border-top: 10px solid $gray-slate;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -21,7 +21,7 @@ body {
     border-top: none;
   }
 
-} // body
+} //
 
 #content-wrapper {
   display: inline-block;
