--- a/app/_scss/areas/_post-template.scss
+++ b/app/_scss/areas/_post-template.scss
@@ -1,8 +1,8 @@
 // ------------------------------------------------------------------
-//  Page Template
+//  Post Template
 // ------------------------------------------------------------------
 
-.page {
+.post {
 
   img {
     border-radius: 50px;
