--- a/app/_scss/dependencies/variables/_colors.scss
+++ b/app/_scss/dependencies/variables/_colors.scss
@@ -75,6 +75,7 @@ $clouds: #ecf0f1;
 $silver: #bdc3c7;
 $concrete: #95a5a6;
 $asbestos: #7f8c8d;
+$gray-slate: #3e454f;
 
 //  Colors2THings
 // ------------------------------------------------------------------
