--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -37,7 +37,7 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 </head>
-<body class="preload halloween {% if page.post-image %}custom-image{% endif %}">
+<body class="preload christmas {% if page.post-image %}custom-image{% endif %}">
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
