--- a/app/_layouts/post.html
+++ b/app/_layouts/post.html
@@ -3,18 +3,19 @@ layout: default
 ---
 <article class="post">
 
-  <header>
-   <h1>{{ post.title }}</h1>
+  <header class="post-header">
+   <h1>{{ page.title }}</h1>
   </header>
 
   {{ content }}
 
-  <footer>
+  <footer class="post-footer">
     <dl>
       <dt>Date Posted</dt>
-        <dd>{{ post.date}}</dd>
+        <dd><time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time></dd>
       <dt>Trackback URL</dt>
-        <dd><a href="{{ post.url }}">{{ post.url }}"</a></dd>
+        <dd><a href="{{ page.url }}">{{ page.url }}</a></dd>
     </dl>
   </footer>
+
 </article>
