--- a/app/_scss/areas/_post-template.scss
+++ b/app/_scss/areas/_post-template.scss
@@ -12,4 +12,21 @@
     margin: 20px;
   }
 
-} // .page
+} // .post
+
+.post-footer {
+  font-size: 13px;
+  margin-top: 50px;
+
+  dt {
+    float: left;
+    width: 150px;
+  }
+
+  dd {
+    width: calc(100% - 200px;)
+  }
+
+} // .post-footer
+
+
