--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -25,6 +25,16 @@
 
 @import "base/_default";
 
+// Vendor
+// ------------------------------------------------------------------
+
+@import "vendor/colorbox";
+
+// Components
+// ------------------------------------------------------------------
+
+@import "components/syntax";
+
 // Sections of Page
 // ------------------------------------------------------------------
 
@@ -39,3 +49,4 @@
 // ------------------------------------------------------------------
 
 @import "dependencies/print";
+
