post about github badge

--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -23,11 +23,9 @@
     <style>
       #page-header {
         background-image: url({{ page.post-image }}) !important;
-        background-size: 100% auto;
       }
     </style>
   {% endif %}
-
 
   <!-- build:js({app,.tmp}) /js/head-scripts.js -->
   <!-- Replace with a custom modernizer build for production -->
@@ -38,7 +36,7 @@
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 </head>
-<body class="preload christmas {% if page.post-image %}custom-image{% endif %}">
+<body class="preload {% if page.post-image %}custom-image{% endif %}">
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
