--- a/app/_scss/areas/_page-header.scss
+++ b/app/_scss/areas/_page-header.scss
@@ -14,6 +14,10 @@
   position: relative;
   width: $sidebar-width;
 
+  .custom-image & {
+    background-size: 100% auto;
+  }
+
   @include bodhi(compact) {
     background-size: 25% auto;
     background-position: 0 -100px;
