Removing unnecessary divs

--- a/app/_scss/areas/_page-header.scss
+++ b/app/_scss/areas/_page-header.scss
@@ -90,7 +90,6 @@
 
   } // @each
 
-
   .social-links {
     @extend %list-in-disguise;
     position: absolute;
@@ -142,11 +141,19 @@
   display: inline-block;
   height: 100px;
   margin-top: 20px;
-  width: 100%;
+  padding-right: -moz-calc(100% - 1280px);
+  padding-right: -webkit-calc(100% - 1280px);
+  padding-right: calc(100% - 1280px);
+  width: -moz-calc(100% - #{$sidebar-width});
+  width: -calc calc(100% - #{$sidebar-width});
+  width: calc(100% - #{$sidebar-width});
 
   @include bodhi(compact) {
-   height: 50px;
-   max-width: $nest-width;
+    height: 50px;
+    padding: 0 20px;
+    max-width: none;
+    min-height: 0;
+    width: 100%;
   }
 
   ol {
