--- a/app/_scss/areas/_page-header.scss
+++ b/app/_scss/areas/_page-header.scss
@@ -140,13 +140,12 @@
   @extend %clearfix;
   display: inline-block;
   height: $navigation-height;
-  padding-top: 20px;
-  padding-right: calc(100% - 1280px);
+  padding: 20px 20px 0 0;
   width: calc(100% - #{$sidebar-width});
 
   @include bodhi(compact) {
     height: $navigation-height-compact;
-    padding: 0 30px;
+    padding: 20px 30px 0 30px;
     width: 100%;
   }
 
