--- a/app/_scss/areas/_post-template.scss
+++ b/app/_scss/areas/_post-template.scss
@@ -8,7 +8,13 @@
     max-height: 300px;
     max-width: $nest-width;
     margin: 20px;
-  }
+
+    @include bodhi(compact) {
+      margin: 20px 0;
+      max-width: 100%;
+    }
+
+  } // img
 
 } // .post
 
