--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -15,7 +15,6 @@
   <!-- build:css({app,.tmp}) /css/main.css -->
   <link rel="stylesheet" href="/_bower_components/colorbox/example1/colorbox.css">
   <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/main.css">
   <!-- endbuild -->
 
@@ -44,12 +43,12 @@
 
   <header id="page-header" role="banner">
 
-    <h1>Lynn.io</h1>
+    <a href="/"><h1>Lynn.io</h1></a>
 
     <ul class="social-links">
-      <li><a class="ss-icon" href="http://www.github.com/lynnwallenstein" target="github">GitHubOctocat</a></li>
-      <li><a class="ss-icon" href="http://www.twitter.com/lynnwallenstein" target="twitter">Twitter</a></li>
-      <li><a class="ss-icon" href="http://www.dribbble.com/lynnwallenstein" target="dribbble">Dribbble</a></li>
+      <li><a class="ss-icon ss-social-circle" href="http://www.github.com/lynnwallenstein" target="github">GitHubOctocat</a></li>
+      <li><a class="ss-icon ss-social-circle" href="http://www.twitter.com/lynnwallenstein" target="twitter">Twitter</a></li>
+      <li><a class="ss-icon ss-social-circle" href="http://www.dribbble.com/lynnwallenstein" target="dribbble">Dribbble</a></li>
     </ul>
 
   </header><!-- /header#page-header-->
