--- a/app/_scss/dependencies/variables/_typography.scss
+++ b/app/_scss/dependencies/variables/_typography.scss
@@ -3,6 +3,7 @@
 // ------------------------------------------------------------------
 
 @import "app/fonts/social-circle/_ss-social-circle.scss";
+@import "app/fonts/ss-air/_ss-air.scss";
 
 $heading-stack: "atrament-web", sans-serif;
 $body-stack: Avenir, Helvetica, Arial, sans-serif !default;
