--- a/app/_layouts/tag_index.html
+++ b/app/_layouts/tag_index.html
@@ -9,16 +9,7 @@ layout: default
     {% for tag in post.tags %}
       {% if tag == page.tag %}
       <li>
-        <time datetime='{{post.date | date: "%Y-%m-%d"}}'>
-          {{post.date | date: "%m/%d/%y"}}
-        </time>
-        <a href='{{post.url}}'>{{post.title}}</a>
-        <p>{{post.summary}}
-        <ul class="other-tag-list">
-          {% for tag in post.tags %}
-          <li class="inline archive_list"><a class="tag_list_link" href="/tag/{{ tag }}">{{ tag }}</a></li>
-          {% endfor %}
-        </ul>
+        {% include _post.html %}
       </li>
       {% endif %}
     {% endfor %}
