Layout updates for content centering

--- a/app/_scss/dependencies/extends/_non-semantic-helpers.scss
+++ b/app/_scss/dependencies/extends/_non-semantic-helpers.scss
@@ -77,3 +77,9 @@
   }
 
 } // %clearfix
+
+
+%nested {
+  padding-left: calc(50% - #{$nest-width});
+  padding-right: calc(50% - #{$nest-width});
+}
