--- a/app/_scss/areas/_layout.scss
+++ b/app/_scss/areas/_layout.scss
@@ -36,10 +36,17 @@ body {
 
   @include bodhi(compact) {
     height: auto;
-    padding: 0 20px;
+    padding: 0;
+    padding-left: calc(50% - (#{$nest-width} / 2));
+    padding-right: calc(50% - (#{$nest-width} / 2));
     max-width: none;
     min-height: 0;
     width: 100%;
+  }
+
+  @include bodhi(phone) {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
 } // #main
