--- a/app/_layouts/page.html
+++ b/app/_layouts/page.html
@@ -2,5 +2,10 @@
 layout: default
 ---
 <article class="page">
+
+  <header class="post-header">
+    <h1>{{ page.title }}</h1>
+  </header>
+
   {{ content }}
 </article>
