--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -72,11 +72,11 @@
     </ol>
   </nav>
 
-  <section id="main" role="main">
+  <main id="page-main" role="main">
 
    {{ content }}
 
-  </section>
+  </main>
 
   {% include scripts.html %}
 
