--- a/app/_layouts/page.html
+++ b/app/_layouts/page.html
@@ -7,5 +7,8 @@ layout: default
     <h1>{{ page.title }}</h1>
   </header>
 
-  {{ content | emojify }}
+  <main class="page-main">
+    {{ content | emojify }}
+  </main>
+
 </article>
