--- a/app/_scss/dependencies/variables/_colors.scss
+++ b/app/_scss/dependencies/variables/_colors.scss
@@ -87,7 +87,7 @@ $site-background-color: $white !default;
 
 // Text Color
 
-$text-color: #222 !default;
+$text-color: $black !default;
 $text-color-light: $gray-light !default;
 
 // Input placeholder text color
