--- a/app/_scss/areas/_posts.scss
+++ b/app/_scss/areas/_posts.scss
@@ -16,14 +16,17 @@
     margin-bottom: 50px;
   }
 
-  a {
+  a,
+  a:link,
+  a:visited {
+    color: $black;
     text-decoration: none;
   }
 
   h1 {
-    @extend %font-freight;
+    @extend %font-jaf-bernino-sans;
     font-size: 28px;
-    font-weight: 700;
+    letter-spacing: -0.02em;
     line-height: 1.4;
     margin: 0;
     padding: 0;
