--- a/app/_scss/dependencies/variables/_typography.scss
+++ b/app/_scss/dependencies/variables/_typography.scss
@@ -5,7 +5,7 @@
 @import "app/fonts/social-circle/_ss-social-circle.scss";
 @import "app/fonts/ss-air/_ss-air.scss";
 
-$heading-stack: "atrament-web", sans-serif;
+$heading-stack: "jaf-bernino-sans", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
 $body-stack: Avenir, Helvetica, Arial, sans-serif !default;
 $alt-stack:  Helvetica, Arial, sans-serif !default;
 
@@ -13,8 +13,8 @@ $alt-stack:  Helvetica, Arial, sans-serif !default;
   font-family: "atrament-web",sans-serif;
 }
 
-%font-freight {
-  font-family: "freight-sans-pro",sans-serif;
+%font-jaf-bernino-sans {
+  font-family: $heading-stack;
 }
 
 $base-font-size: 18px !default;
@@ -23,7 +23,7 @@ $base-line-height: 22px !default;
 //  Headings
 
 $headings-font-family: $heading-stack !default;
-$headings-font-weight: normal !default; // instead of browser default, bold
+$headings-font-weight: 700 !default; // instead of browser default, bold
 $headings-font-color: '' !default; // empty to use BS default, $text-color
 
 $subheadings-font-family: $heading-stack !default;
