--- a/app/_scss/dependencies/variables/_typography.scss
+++ b/app/_scss/dependencies/variables/_typography.scss
@@ -17,6 +17,10 @@ $alt-stack:  Helvetica, Arial, sans-serif !default;
   font-family: $heading-stack;
 }
 
+%font-source-code-pro {
+  font-family: "source-code-pro";
+}
+
 $base-font-size: 18px !default;
 $base-line-height: 22px !default;
 
