Font smoothing and alignment

--- a/app/_scss/base/_default.scss
+++ b/app/_scss/base/_default.scss
@@ -5,6 +5,8 @@
 * {
   background-repeat: no-repeat;
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 html {
