Link height on article posts

--- a/app/_scss/areas/_posts.scss
+++ b/app/_scss/areas/_posts.scss
@@ -20,8 +20,8 @@
     @extend %font-freight;
     font-size: 28px;
     font-weight: 700;
-    line-height: 1.4;
-    margin: 0;
+    line-height: 1.1;
+    margin: 0 0 5px 0;
     padding: 0;
   }
 
