--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -6,3 +6,5 @@
   <script src="/js/plugins.js"></script>
   <script src="/js/main.js"></script>
 <!-- endbuild -->
+
+<script type="text/javascript">var _gauges=_gauges||[];(function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.id="gauges-tracker";e.setAttribute("data-site-id","5161d8fbf5a1f51ab200007c");e.src="//secure.gaug.es/track.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()</script>
