New post about tinge

--- a/app/_scss/areas/_posts.scss
+++ b/app/_scss/areas/_posts.scss
@@ -88,6 +88,14 @@
 
 } // .post
 
+.post-header {
+
+  h1 {
+    line-height: 1.2;
+  }
+
+} // .post-header
+
 .post-footer {
   font-size: 13px;
   margin-top: 50px;
