--- a/app/_scss/areas/_page-header.scss
+++ b/app/_scss/areas/_page-header.scss
@@ -103,8 +103,8 @@
     }
 
     @include bodhi(phone) {
-      right: 10px;
-      bottom: 10px;
+      right: 0;
+      bottom: 0;
     }
 
     li {
@@ -114,6 +114,10 @@
 
       &:last-child {
         margin-right: 0;
+      }
+
+      @include bodhi(phone) {
+        margin-right: 2px;
       }
 
     } // li
