--- a/app/_scss/dependencies/variables/_typography.scss
+++ b/app/_scss/dependencies/variables/_typography.scss
@@ -22,7 +22,7 @@ font-family: "source-code-pro";
 }
 
 $base-font-size   : 18px !default;
-$base-line-height : 22px !default;
+$base-line-height : 1.4 !default;
 
 //  Headings
 $headings-font-family : $heading-stack !default;
